MTSL-813 - Fixed Cross on Mobile;

--- a/src/lwc/portalAdvancedSearchPage/portalAdvancedSearchPage.css
+++ b/src/lwc/portalAdvancedSearchPage/portalAdvancedSearchPage.css
@@ -12,11 +12,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-shrink: 0;
 }
 
 .searchBarBarContainer {
   display: flex;
-  flex: 1 0 auto;
+  flex: 1 1 auto;
   align-items: center;
   justify-content: center;
 }
@@ -48,4 +49,10 @@
 
 .marginTop {
   margin-top: 3px;
+}
+
+@media only screen and (max-width: 500px) {
+  .searchIconMagnifying {
+    display: none;
+  }
 }
